<resources>
    <string name="app_name">filepickDialog</string>
    <string name="ask_grant">Need the permission of read and write,click the button below to authorize</string>
    <string name="go_setting_grant">If authorize fail,click the button below to enter the app info activity.Then open the app\'s full storage</string>
    <string name="cancel_btn">Cancel</string>
    <string name="new_folder_btn">new folder</string>
    <string name="select_btn">select</string>
    <string name="grant_btn">Grant</string>
    <string name="go_setting_btn">Go Setting</string>
    <string name="back_ibtn">back</string>
</resources>
